// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormCheckbox Optional Field 1`] = `
<section
  className="flex gap-1"
>
  <input
    className=""
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
  <div
    className="leading-tight text-base"
  >
    <label
      htmlFor="areConditionsAccepted"
    >
      Do you accept?
      <span
        className="text-gray-500 float-right text-sm ml-2 transform translate-y-1"
      >
        (Optional)
      </span>
    </label>
  </div>
</section>
`;

exports[`Storyshots Forms/FormCheckbox With Error 1`] = `
<section
  className="flex gap-1"
>
  <input
    className="error"
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
  <div
    className="leading-tight text-base"
  >
    <label
      htmlFor="areConditionsAccepted"
    >
      Ich akzeptiere die
       
      <a
        href="https://www.technologiestiftung-berlin.de/de/datenschutz/"
      >
        Nutzungsbedingungen
      </a>
      .
    </label>
    <div
      className="text-red-500 text-sm mt-2"
    >
      Your checkbox has to be beautiful
    </div>
    <div
      className="text-red-500 text-sm mt-2"
    >
      Your checkbox is not checked
    </div>
  </div>
</section>
`;

exports[`Storyshots Forms/FormCheckbox With Label 1`] = `
<section
  className="flex gap-1"
>
  <input
    className=""
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
  <div
    className="leading-tight text-base"
  >
    <label
      htmlFor="areConditionsAccepted"
    >
      Do you accept?
    </label>
  </div>
</section>
`;

exports[`Storyshots Forms/FormCheckbox Without Label 1`] = `
<section
  className="flex gap-1"
>
  <input
    className=""
    min={20}
    name="areConditionsAccepted"
    onChange={[Function]}
    required={true}
    type="checkbox"
  />
</section>
`;
